# Advent2023

./: README.md
01/: CMakeLists.txt  main.cpp
02/: CMakeLists.txt  main.cpp
03/: CMakeLists.txt  main.cpp
04/: main.cpp
05/: main.cpp
06/: main.cpp
07/: main.cpp
08/: input9.txt  main.cpp
09/: main.cpp
10/: main.cpp
11/: main.cpp
12/: main.cpp
13/: main.cpp
14/: main.cpp
15/: main.cpp
16/: main.cpp
17/: main.cpp
18/: main.cpp
19/: main.cpp
20/: main.cpp
21/: main.cpp
22/: main.cpp
23/: main.cpp
24/: CMakeLists.txt  main.cpp  mainWithMatrixAttempt.cpp
25/: input3.txt  main.cpp
utils/: utils.h
